change repository and other urls to fekide

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,6 @@ after_success:
 notifications:
   email:
     recipients:
-    - travisci@wodby.com
+    - it@fekid.de
     on_success: never
     on_failure: always
