--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ stages:
   before_script:
     - docker -l debug version
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-    - apk add make bash
+    - apk add make bash docker-compose
   script:
     - cd "${PHP_VER}" || cd "${PHP_VER:0:1}"
     - make
