--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ services:
 env:
   global:
   - BASE_IMAGE_STABILITY_TAG=4.12.12
+  - IMAGE_HOME=fekide
   matrix:
   - PHP_VER=7.4 TAGS=7.4,7,latest
   - PHP_VER=7.3 TAGS=7.3
